# Langchain_Course

./: .gitignore  Course-Transcripts.txt
00_Agent_Tools/: main.py
00_Agtent_Tools/: main.py
00_case01/: main.py  pyproject.toml
01_Stream/: main.py  pyproject.toml
02_Challenge_00_01_NumberAnalizer/: instructions.md  pyproject.toml
02_Challengefor_00_01/: main.py
03_Tools/: main.py  pyproject.toml
04_Tools_via_MCP/: main.py  pyproject.toml
05_ShortTerm_Memory/: main.py  pyproject.toml
06_Challenge_00_05/: instructions.md  itemsDB.csv  main.py  pyproject.toml
06_Challenge_00_05_ShoppingAgent/: itemsDB.csv  main.py
07_Structured_Output/: main.py  pyproject.toml
08_DynamicPrompt/: main.py  pyproject.toml
09_HumanInTheLoop/: main.py  pyproject.toml
10_Challenge_00_09/: Cover_letter_to_Joneywell.txt  Cover_letter_to_Nvidia.txt  Cover_letter_to_lucanet.txt  applications.csv  main.py  pyproject.toml  test.py
10_Challenge_00_09_JobApplicationAgent/: main.py  pyproject.toml
11_Ollama_Test/: main.py  pyproject.toml
12_Challenge_Financial_Agent/: README.md  cash_management_helper_functions.py  cash_management_tools.py  config.py  main.py  my_cash.csv  my_portfolio.csv  portfolio_operations.py  prompts.yaml  pyproject.toml  requirements.txt  sec_data.py  stock_data_management.py  stock_evaluations.csv  tes.py  test_sec.py  trades_log.csv  vector_store_creator.py
12_Challenge_Financial_Agent/Quarterly_Reports_DB/: index.faiss  index.pkl
12_Challenge_Financial_Agent/Quaterly_Reports/: index.faiss  index.pkl
12_Challenge_Finantial_Agent/: main.py  ollama_agent.py  prompts.yaml  pyproject.toml
