[project]
name = "10-challenge-00-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "langchain>=1.0.4",
    "langchain-openai>=1.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
