[project]
name = "12-challenge-finantial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "edgartools>=4.29.0",
    "faiss-cpu>=1.13.0",
    "gradio>=5.49.1",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface>=1.0.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "pandas>=2.3.3",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sec-edgar-downloader>=5.0.3",
    "sentence-transformers>=5.1.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
